--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "forta-{developerAbbreviation}-{protocolAbbreviation}-bigagent",
+  "name": "forta-{developerAbbreviation}-{protocolAbbreviation}-monorepo",
   "version": "0.0.1",
-  "description": "Forta Bot template for monitoring a large combination of conditions",
+  "description": "Forta Bots to monitor Rand.network ecosystem",
   "scripts": {
     "start": "npm run start:dev",
     "start:dev": "nodemon --watch src --watch forta.config.json --watch agent-config.json -e js,json --exec 'forta-agent run'",
